osprey_worker/src/osprey/engine/query_language/tests/test_parse_query_to_validated_ast/test_unary_operator_query_validation_failure[not 1].txt
error: the operand must not be a literal
--> main.sml:1:8
     |
   1 | Query = not 1
     |         ^ the right side of the `Number(value=1)` must be a non-literal (non-constant) value
--> (1) main.sml:1:12
     |
   1 | Query = not 1
     |             ^ this is a literal value